save and mutate

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <div id="verticalButtons">
+      <button id="restart">Restart</button>
+      <button id="save">Save</button>
+      <button id="discard">Discard</button>
+    </div>
     <script src="src/main.ts" type="module"></script>
   </body>
 </html>
